--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
-    "socket.io": "^4.8.3"
+    "express-session": "^1.18.2",
+    "multer": "^2.0.2",
+    "socket.io": "^4.8.3",
+    "sqlite3": "^5.1.7"
   }
 }
