--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "socket.io": "^4.8.3",
     "sqlite3": "^5.1.7"
